<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
    >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/login"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:text="@string/sign_up"
            android:textSize="26sp"
            android:textStyle="bold"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_name"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="3dp"
            android:textSize="15sp"
            android:textStyle="bold"
        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/et_shape"
            android:hint="@string/enter_your_name"
            android:paddingStart="10dp"
            android:layout_marginBottom="5dp"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="3dp"
            android:textSize="15sp"
            android:textStyle="bold"
        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/et_shape"
            android:hint="@string/enter_a_username"
            android:paddingStart="10dp"
            android:layout_marginBottom="5dp"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="3dp"
            android:textSize="15sp"
            android:textStyle="bold"
        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/et_shape"
            android:hint="@string/enter_your_email"
            android:paddingStart="10dp"
            android:layout_marginBottom="5dp"
            tools:ignore="LabelFor"
            android:inputType="textEmailAddress"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="3dp"
            android:textSize="15sp"
            android:textStyle="bold"
        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/et_shape"
            android:hint="@string/enter_a_strong_password"
            android:paddingStart="10dp"
            android:layout_marginBottom="5dp"
            tools:ignore="LabelFor"
            android:inputType="textPassword"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="3dp"
            android:textSize="15sp"
            android:textStyle="bold"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/et_shape"
            android:hint="@string/confirm_your_password"
            android:paddingStart="10dp"
            android:layout_marginBottom="30dp"
            tools:ignore="LabelFor"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/sign_up"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_button"
            android:textColor="@color/white"
        />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/having_an_account"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_here"
                android:id="@+id/tv_Login"
                android:textColor="#795D4F"
            />
        </LinearLayout>
    </LinearLayout>
</ScrollView>