<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        tools:context=".Login_Activity"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/login"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:text="@string/login"
            android:textSize="26sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="3dp"
            android:textSize="15sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/et_shape"
            android:hint="@string/enter_a_username"
            android:paddingStart="10dp"
            android:layout_marginBottom="5dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="3dp"
            android:textSize="15sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/et_shape"
            android:hint="@string/enter_a_strong_password"
            android:paddingStart="10dp"
            android:layout_marginBottom="30dp"
            tools:ignore="LabelFor"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/btn_Login"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/login"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_button"
            android:textColor="@color/white"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doesn_t_have_an_account"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_here"
                android:id="@+id/tv_Signup"
                android:textColor="#795D4F"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>